# old-knorba

C-Lib/: CMakeLists.txt
C-Lib/include/: knorba.h
CPP-Lib/: CMakeLists.txt
CPP-Lib/include/: knorba.hpp
CXX-Preprocessor/: CMakeLists.txt
CXX-Preprocessor/include/: StringStreamer.h  common.h
CXX-Preprocessor/src/: ClangDriver.h  ClangProxy.cpp  ClangProxy.h  FixedSettings.h  FixedSettings.h.in  ParticleScope.h  PragmaParticle.cpp  PragmaParticle.h  Preprocessor.cpp  SharedVariable.h  SourceRangeEx.cpp  SourceRangeEx.h  SynchronizedBlock.cpp  SynchronizedBlock.h  ast-test.cpp  ast-test.h
CXX-Preprocessor/test/: particle.c
Common/: CMakeLists.txt  Doxyfile
Common/cmake/: setup-systemwide-include-dir.cmake
Common/src/: Array.h  Bool.h  Character.h  Double.h  IndexOutOfBoundException.h  Integer.h  InvalidPointerException.h  KSystemException.h  Logger.cpp  Logger.h  LongInteger.h  ManagedObject.cpp  ManagedObject.h  ManagedPointer.cpp  ManagedPointer.h  MemoryException.h  NullPointerException.h  ObjectDumpBuilder.cpp  ObjectDumpBuilder.h  ObjectPool.cpp  ObjectPool.h  OutOfMemoryException.h  Ptr.h  PtrDecl.h  SerializingStreamer.h  Streamer.cpp  Streamer.h  Timer.cpp  Timer.h  common.h  mem.h
Common/test/: TestArray.cpp  TestLogger.cpp  TestManagedPointer.cpp  TestObjectDumpBuidler.cpp
